| Bug #46486 | warnings produced when running mysql_install_db | ||
|---|---|---|---|
| Submitted: | 30 Jul 2009 19:16 | Modified: | 18 Dec 2009 13:10 |
| Reporter: | Zardosht Kasheff (OCA) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.1.36 | OS: | Any |
| Assigned to: | Kristofer Pettersson | CPU Architecture: | Any |
[30 Jul 2009 19:16]
Zardosht Kasheff
[30 Jul 2009 21:00]
MySQL Verification Team
Thank you for the bug report. miguel@lara:~$ dbs/5.1/libexec/mysqld 090730 17:52:59 [Note] Plugin 'FEDERATED' is disabled. 090730 17:52:59 [Note] Plugin 'ndbcluster' is disabled. 090730 17:53:00 InnoDB: Started; log sequence number 0 44233 090730 17:53:00 [Note] Event Scheduler: Loaded 0 events 090730 17:53:00 [Note] dbs/5.1/libexec/mysqld: ready for connections. Version: '5.1.38-debug' socket: '/tmp/mysql.sock' port: 3306 Source distribution 090730 17:53:36 [Note] Got signal 15 to shutdown mysqld 090730 17:53:36 [Note] dbs/5.1/libexec/mysqld: Normal shutdown 090730 17:53:36 [Note] Event Scheduler: Purging the queue. 0 events 090730 17:53:36 InnoDB: Starting shutdown... 090730 17:53:37 InnoDB: Shutdown completed; log sequence number 0 44233 090730 17:53:37 [Warning] Forcing shutdown of 2 plugins 090730 17:53:37 [Note] dbs/5.1/libexec/mysqld: Shutdown complete
[3 Sep 2009 10:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/82313 3102 Kristofer Pettersson 2009-09-03 Bug#46486 warnings produced when running mysql_install_db During start up some plugins are disabled by default. This caused an additional warning level message to be emitted as a result of a previous bug patch. Since there is risk of unnecessary confusion regarding the operation level of the server the redundant information is removed.
[4 Sep 2009 10:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/82440 3103 Kristofer Pettersson 2009-09-04 Bug#46486 warnings produced when running mysql_install_db Incremental patch part 2 Removing dead code and changing a note level message to a warning. @ sql/sql_plugin.cc * Remove free_slots. The only purpose for this variable was to trigger a redundant warning message and it failed. * Change the note level message about shutting down plugins which didn't end nicely to a warning level message. (If this shutdown fails and there still are reference counts in the plugin an additional error level message is emitted)
[14 Sep 2009 16:03]
Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090914155317-m1g9wodmndzdj4l1) (version source revid:alik@sun.com-20090914155317-m1g9wodmndzdj4l1) (merge vers: 5.4.4-alpha) (pib:11)
[15 Sep 2009 13:51]
Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090915134838-5nj3ycjfsqc2vr2f) (version source revid:alik@sun.com-20090915134742-ni3kbyxtevaoxez5) (merge vers: 5.4.4-alpha) (pib:11)
[16 Sep 2009 22:07]
Kristofer Pettersson
Cosmetic.
[6 Oct 2009 8:58]
Bugs System
Pushed into 5.1.40 (revid:joro@sun.com-20091006073316-lea2cpijh9r6on7c) (version source revid:ingo.struewing@sun.com-20090916070128-6053el2ucp5z7pyn) (merge vers: 5.1.39) (pib:11)
[6 Oct 2009 23:18]
Paul DuBois
Cosmetic fix. No changelog entry required.
[18 Dec 2009 10:33]
Bugs System
Pushed into 5.1.41-ndb-7.1.0 (revid:jonas@mysql.com-20091218102229-64tk47xonu3dv6r6) (version source revid:jonas@mysql.com-20091218095730-26gwjidfsdw45dto) (merge vers: 5.1.41-ndb-7.1.0) (pib:15)
[18 Dec 2009 10:49]
Bugs System
Pushed into 5.1.41-ndb-6.2.19 (revid:jonas@mysql.com-20091218100224-vtzr0fahhsuhjsmt) (version source revid:jonas@mysql.com-20091217101452-qwzyaig50w74xmye) (merge vers: 5.1.41-ndb-6.2.19) (pib:15)
[18 Dec 2009 11:04]
Bugs System
Pushed into 5.1.41-ndb-6.3.31 (revid:jonas@mysql.com-20091218100616-75d9tek96o6ob6k0) (version source revid:jonas@mysql.com-20091217154335-290no45qdins5bwo) (merge vers: 5.1.41-ndb-6.3.31) (pib:15)
[18 Dec 2009 11:18]
Bugs System
Pushed into 5.1.41-ndb-7.0.11 (revid:jonas@mysql.com-20091218101303-ga32mrnr15jsa606) (version source revid:jonas@mysql.com-20091218064304-ezreonykd9f4kelk) (merge vers: 5.1.41-ndb-7.0.11) (pib:15)
[18 Dec 2009 13:10]
MC Brown
No changelog entry required
